fix Module Moderation (not finished)